# urchinEngine

./: .gitignore  .project  AUTHORS  CMakeLists.txt  DEV.md  LICENSE.md  MEMO.md  Makefile  NOTES.md  README.md  SETUP.md  SETUP_ENV.md  TODO.md  WIN_SETUP.md
3dEngine/: .cproject  .project  CMakeLists.txt  io_export_md5-266.py  io_export_md5.py  io_export_urchin.py  move_save_dir.py
3dEngine/docs/: Coordinates.md  DependencyGraph.md  SceneGraph.md
3dEngine/resources/blender/: deploy.sh  io_export_urchin.py  readme.txt
3dEngine/resources/gimp/: qoi-ci-gimp_1.1.0-1_amd64.deb  setup.txt
3dEngine/resources/shaders/: _globalConstants.frag  _lightingFunctions.frag  _samplingFunctions.frag  _transformFunctions.frag  ambientOcclusion.comp  ambientOcclusion.frag  ambientOcclusion.vert  bilateralBlurTex.frag  bloomCombine.frag  bloomDownSample.comp  bloomDownSample.frag  bloomPreFilter.comp  bloomPreFilter.frag  bloomUpSample.frag  blurTex.frag  blurTexArray.frag  deferredSecondPass.frag  deferredShading.frag  displayGeometry.frag  displayGeometry.vert  displayGeometryWireframe.vert  displayTexture.frag  displayTexture.vert  displayTextureArray.frag  downSampleTex.frag  downSampleTex.geo  downSampleTexArray.frag  fxaa.frag  fxaa.vert  gaussianBlurTex.frag  gaussianBlurTexArray.frag  gui.vert  hbao.frag  lighting.frag  lighting.vert  model.frag  model.vert  modelDepthOnly.vert  modelDiffuse.frag  modelDiffuse.vert  (+55 more)
3dEngine/src/: TODO.md  TODO.txt  Urchin3dEngine.h
3dEngine/src/graphic/: GraphicService.cpp  GraphicService.h
3dEngine/src/i18n/: I18nService.cpp  I18nService.h  LabelTranslator.cpp  LabelTranslator.h  LanguageTranslator.cpp  LanguageTranslator.h  ParameterizedText.cpp  ParameterizedText.h  ParameterizedText.inl  TextTranslator.cpp  TextTranslator.h  TranslatableLabel.h  TranslatableText.h
3dEngine/src/loader/: Loader.cpp  Loader.h  Loader.inl
3dEngine/src/resources/: MediaManager.cpp  MediaManager.h  MediaManager.inl  Resource.cpp  Resource.h  ResourceContainer.cpp  ResourceContainer.h  ResourceContainer.inl  ResourceManager.cpp  ResourceManager.h  ResourceManager.inl  ResourceRetriever.cpp  ResourceRetriever.h  ResourceRetriever.inl
3dEngine/src/scene/: InputDevice.h  InputDeviceKey.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
3dEngine/src/texture/: TextureManager.cpp  TextureManager.h
3dEngine/src/texturefilter/: TextureFilter.cpp  TextureFilter.h  TextureFilter.inl  TextureFilterBuilder.h
3dEngine/targetLinux/: makefile  objects.mk  sources.mk
AIEngine/: .cproject  .project  CMakeLists.txt
AIEngine/src/: AIEnvironment.cpp  AIEnvironment.h  AIManager.cpp  AIManager.h  TODO.md  TODO.txt  UrchinAIEngine.h
AIEngine/targetLinux/: makefile  objects.mk  sources.mk
aggregation/: CMakeLists.txt
aggregation/src/: UrchinAggregation.h
aiEngine/: CMakeLists.txt
aiEngine/docs/: Coordinates.md  NavMesh.adoc  Pathfinding.adoc
aiEngine/src/: AIEnvironment.cpp  AIEnvironment.h  UrchinAIEngine.h
common/: .cproject  .project  CMakeLists.txt
common/src/: TODO.md  TODO.txt  UrchinCommon.h
common/src/io/: MapUtil.h  (+7 more)
common/targetLinux/: makefile  sources.mk
mapEditor/: .cproject  .project  CMakeLists.txt  Makefile  programQt2.pro
mapEditor/resources/: emptyScene.tga  engine.properties
mapEditor/save/: preferredPaths.properties  states.properties
mapEditor/src/: Main.cpp  Main.h  MapEditorWindow.cpp  MapEditorWindow.h  StateSaveHelper.cpp  StateSaveHelper.h  TODO.md  TODO.txt
mapEditor/targetLinux/: moc_BodyBoxShapeWidget.cpp  moc_BodyCapsuleShapeWidget.cpp  moc_BodyCompoundShapeWidget.cpp  moc_BodyConvexHullShapeWidget.cpp  moc_BodyCylinderShapeWidget.cpp  moc_BodyShapeWidget.cpp  moc_BodySphereShapeWidget.cpp  moc_BoxShapeWidget.cpp  moc_CapsuleShapeWidget.cpp  moc_ChangeBodyShapeDialog.cpp  moc_ChangeSoundShapeDialog.cpp  moc_ChangeSoundTriggerDialog.cpp  moc_CompoundShapeWidget.cpp  moc_ConvexHullShapeWidget.cpp  moc_CylinderShapeWidget.cpp  moc_LightControllerWidget.cpp  moc_LightTableView.cpp  moc_LocalizedShapeTableView.cpp  moc_MapEditorWindow.cpp  moc_NewBodyDialog.cpp  moc_NewBodyShapeDialog.cpp  moc_NewDialog.cpp  moc_NewLightDialog.cpp  moc_NewObjectDialog.cpp  moc_NewSceneObjectDialog.cpp  moc_NewSoundDialog.cpp  moc_NoBodyShapeWidget.cpp  moc_NoShapeWidget.cpp  moc_NotSavedDialog.cpp  moc_ObjectControllerWidget.cpp  moc_ObjectTableView.cpp  moc_SceneControllerWidget.cpp  moc_SceneDisplayerWidget.cpp  moc_SceneObjectTableView.cpp  moc_SceneWidget.cpp  moc_SoundBoxShapeWidget.cpp  moc_SoundControllerWidget.cpp  moc_SoundShapeWidget.cpp  moc_SoundSphereShapeWidget.cpp  moc_SoundTableView.cpp  (+3 more)
mapHandler/: .cproject  .project  CMakeLists.txt
mapHandler/src/: MapHandler.cpp  MapHandler.h  MapSaveService.cpp  MapSaveService.h  TODO.md  TODO.txt  UrchinMapHandler.h
mapHandler/targetLinux/: makefile  objects.mk  sources.mk
networkEngine/: CMakeLists.txt
networkEngine/src/: NetworkExecutor.cpp  NetworkExecutor.h  TODO.md  TODO.txt  UrchinNetworkEngine.h
physicsEngine/: .cproject  .project  CMakeLists.txt
physicsEngine/src/: PhysicsWorld.cpp  PhysicsWorld.h  TODO.md  TODO.txt  UrchinPhysicsEngine.h
physicsEngine/targetLinux/: makefile  objects.mk  sources.mk
soundEngine/: .cproject  .project  CMakeLists.txt
soundEngine/src/: AudioController.cpp  AudioController.h  MusicLoopPlayer.cpp  MusicLoopPlayer.h  SoundBuilder.cpp  SoundBuilder.h  SoundComponent.cpp  SoundComponent.h  SoundEnvironment.cpp  SoundEnvironment.h  SoundManager.cpp  SoundManager.h  TODO.md  TODO.txt  UrchinSoundEngine.h
soundEngine/targetLinux/: makefile  objects.mk  sources.mk
test/: CMakeLists.txt
test/resources/: engine.properties
test/src/: AssertHelper.cpp  AssertHelper.h  AssertHelper.inl  MainTest.cpp  MainTestExecutor.cpp  MonkeyTestExecutor.cpp  TestExecutor.cpp  UrchinTest.h
unitTest/: .cproject  .project  CMakeLists.txt  epaBoxCapsule.udbg
unitTest/resources/: engine.properties
unitTest/src/: AssertHelper.cpp  AssertHelper.h  MainTest.cpp
unitTest/targetLinux/: makefile  objects.mk  sources.mk
(+3894 files in other folders)
